# insideout

./: .gitignore  README.md  insider-edge-plan.md  pyproject.toml
.claude/: settings.local.json
src/insider_edge/: __init__.py  cli.py  config.py
src/insider_edge/analysis/: backtest.py  horizon_curve.py  phase2.py  returns.py  segments.py  shrinkage.py
src/insider_edge/ingest/: filters.py  normalize.py  parse_form345.py  pipeline.py  schema.py
src/insider_edge/sources/: edgar_bulk.py  edgar_live.py  prices.py
src/insider_edge/store/: db.py
tests/: conftest.py  test_filters.py  test_no_lookahead.py  test_normalize.py  test_returns_panel.py  test_survivorship.py
